--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                       </ul>
                 </div>
             </div>
+            <hr style="margin-top: 15vh;"/>
+            <div class="made-by mt-auto py-3">
+                @ 2021 - Mohammad Rizaldi Huzein Prastomo
+            </div>
         </div>
     </footer>
 </body>
